bug fixes, add checking for last perm and is_default for roles
